[LAB04] lab04 submitted
real fucking finish

--- a/Source/Game/Game.vcxproj
+++ b/Source/Game/Game.vcxproj
@@ -10,6 +10,23 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Cube\BaseCube.cpp" />
+    <ClCompile Include="Main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ChildCube.h" />
+    <ClInclude Include="Cube\BaseCube.h" />
+    <ClInclude Include="Cube\MyCube.h" />
+    <ClInclude Include="StrangeCube.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="Shaders\PS.hlsl" />
+    <FxCompile Include="Shaders\VS.hlsl" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Shaders\Shaders.fxh" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
@@ -69,11 +86,13 @@
       </Command>
     </PostBuildEvent>
     <FxCompile>
+      <EntryPointName>PS</EntryPointName>
+    </FxCompile>
+    <FxCompile>
       <ShaderType>Effect</ShaderType>
     </FxCompile>
     <FxCompile>
       <ShaderModel>5.0</ShaderModel>
-      <EntryPointName>PS</EntryPointName>
     </FxCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -99,28 +118,7 @@
       <Command>
       </Command>
     </PostBuildEvent>
-    <FxCompile>
-      <EntryPointName>PS</EntryPointName>
-      <ShaderType>Effect</ShaderType>
-      <ShaderModel>5.0</ShaderModel>
-    </FxCompile>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="Cube\BaseCube.cpp" />
-    <ClCompile Include="Main.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="ChildCube.h" />
-    <ClInclude Include="Cube\BaseCube.h" />
-    <ClInclude Include="Cube\MyCube.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <FxCompile Include="Shaders\PS.hlsl" />
-    <FxCompile Include="Shaders\VS.hlsl" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Shaders\Shaders.fxh" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
