[LAB08] lab08 submitted
jinJJa lab juckdanghee haera jinjjaro

--- a/Source/Game/Game.vcxproj
+++ b/Source/Game/Game.vcxproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <None Include="Shaders\PhongShaders.fxh" />
     <None Include="Shaders\Shaders.fxh" />
+    <None Include="Shaders\SkinningShaders.fxh" />
     <None Include="Shaders\VoxelShaders.fxh" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
