--- a/Source/Game/Game.vcxproj.filters
+++ b/Source/Game/Game.vcxproj.filters
@@ -66,6 +66,8 @@
   <ItemGroup>
     <FxCompile Include="Shaders\PS.hlsl" />
     <FxCompile Include="Shaders\VS.hlsl" />
+    <FxCompile Include="Shaders\CubeMap_PS.hlsl" />
+    <FxCompile Include="Shaders\CubeMap_VS.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Shaders\Shaders.fxh" />
@@ -73,5 +75,6 @@
     <None Include="Shaders\VoxelShaders.fxh" />
     <None Include="Shaders\SkinningShaders.fxh" />
     <None Include="Shaders\ShadowShaders.fxh" />
+    <None Include="Shaders\CubeMap.fxh" />
   </ItemGroup>
 </Project>
