--- a/Source/Game/Game.vcxproj
+++ b/Source/Game/Game.vcxproj
@@ -27,10 +27,13 @@
     <ClInclude Include="StrangeCube.h" />
   </ItemGroup>
   <ItemGroup>
+    <FxCompile Include="Shaders\CubeMap_PS.hlsl" />
+    <FxCompile Include="Shaders\CubeMap_VS.hlsl" />
     <FxCompile Include="Shaders\PS.hlsl" />
     <FxCompile Include="Shaders\VS.hlsl" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Shaders\CubeMap.fxh" />
     <None Include="Shaders\PhongShaders.fxh" />
     <None Include="Shaders\Shaders.fxh" />
     <None Include="Shaders\ShadowShaders.fxh" />
